@startuml

title __IMAGEPRO.APP's Class Diagram__\n

  namespace com.example.imagepro {
    class com.example.imagepro.BuildConfig {
    }
  }
  

  namespace com.example.imagepro {
    class com.example.imagepro.CameraActivity {
    }
  }
  

  namespace com.example.imagepro {
    class com.example.imagepro.CombinarLetras {
    }
  }
  

  namespace com.example.imagepro {
    class com.example.imagepro.MainActivity {
    }
  }
  

  namespace com.example.imagepro {
    class com.example.imagepro.Texto {
    }
  }
  

  namespace com.example.imagepro {
    class com.example.imagepro.login {
    }
  }
  

  namespace com.example.imagepro {
    class com.example.imagepro.objectDetectorClass {
    }
  }
  

  namespace com.example.imagepro {
    class com.example.imagepro.signLanguageClass {
    }
  }
  

  com.example.imagepro.CameraActivity .up.|> org.opencv.android.CameraBridgeViewBase.CvCameraViewListener2
  com.example.imagepro.CameraActivity -up-|> android.app.Activity
  com.example.imagepro.CameraActivity o-- org.opencv.core.Mat : mGray
  com.example.imagepro.CameraActivity o-- org.opencv.android.BaseLoaderCallback : mLoaderCallback
  com.example.imagepro.CameraActivity o-- org.opencv.android.CameraBridgeViewBase : mOpenCvCameraView
  com.example.imagepro.CameraActivity o-- org.opencv.core.Mat : mRgba
  com.example.imagepro.CameraActivity o-- com.example.imagepro.objectDetectorClass : objectDetectorClass
  com.example.imagepro.CombinarLetras .up.|> org.opencv.android.CameraBridgeViewBase.CvCameraViewListener2
  com.example.imagepro.CombinarLetras -up-|> android.app.Activity
  com.example.imagepro.CombinarLetras o-- org.opencv.core.Mat : mGray
  com.example.imagepro.CombinarLetras o-- org.opencv.android.BaseLoaderCallback : mLoaderCallback
  com.example.imagepro.CombinarLetras o-- org.opencv.android.CameraBridgeViewBase : mOpenCvCameraView
  com.example.imagepro.CombinarLetras o-- org.opencv.core.Mat : mRgba
  com.example.imagepro.CombinarLetras o-- com.example.imagepro.signLanguageClass : signLanguageClass
  com.example.imagepro.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.imagepro.Texto -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.imagepro.login -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
